fix(new_page, news_detail_page, blog_detail, blog_page): center align will all the titles and dates

--- a/core/static/css/tailwind.css
+++ b/core/static/css/tailwind.css
@@ -1710,6 +1710,26 @@ select {
   margin-top: -0.25rem;
 }
 
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.-ml-1 {
+  margin-left: -0.25rem;
+}
+
+.-mt-3 {
+  margin-top: -0.75rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -3049,6 +3069,38 @@ select {
     margin-top: 2rem;
   }
 
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:-mt-0 {
+    margin-top: -0px;
+  }
+
+  .sm\:-mt-12 {
+    margin-top: -3rem;
+  }
+
+  .sm\:-mt-16 {
+    margin-top: -4rem;
+  }
+
+  .sm\:-mt-1 {
+    margin-top: -0.25rem;
+  }
+
+  .sm\:-mt-14 {
+    margin-top: -3.5rem;
+  }
+
+  .sm\:-mb-2 {
+    margin-bottom: -0.5rem;
+  }
+
+  .sm\:-mt-32 {
+    margin-top: -8rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -3262,6 +3314,30 @@ select {
 
   .md\:mr-14 {
     margin-right: 3.5rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:-mt-0 {
+    margin-top: -0px;
+  }
+
+  .md\:-mt-20 {
+    margin-top: -5rem;
+  }
+
+  .md\:-mt-24 {
+    margin-top: -6rem;
+  }
+
+  .md\:-mt-32 {
+    margin-top: -8rem;
+  }
+
+  .md\:-mt-12 {
+    margin-top: -3rem;
   }
 
   .md\:h-12 {
@@ -3511,6 +3587,14 @@ select {
     margin-top: -3.5rem;
   }
 
+  .lg\:-mt-12 {
+    margin-top: -3rem;
+  }
+
+  .lg\:-mt-16 {
+    margin-top: -4rem;
+  }
+
   .lg\:grid {
     display: grid;
   }
@@ -3700,6 +3784,10 @@ select {
     margin-top: 0px;
   }
 
+  .xl\:-mt-16 {
+    margin-top: -4rem;
+  }
+
   .xl\:flex {
     display: flex;
   }
@@ -3876,6 +3964,14 @@ select {
 
   .\32xl\:-mt-16 {
     margin-top: -4rem;
+  }
+
+  .\32xl\:ml-12 {
+    margin-left: 3rem;
+  }
+
+  .\32xl\:mb-8 {
+    margin-bottom: 2rem;
   }
 
   .\32xl\:flex {
